<resources>
    <string name="app_name">LOGIN</string>
    <string name="login_button_text">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="registration_successful">Registration Successful!</string>
</resources>